force-app/main/default/objects/Connection__c/Connection__c.object-meta.xml
<CustomObject>
    <description>Records the relationship between Agenda Item and Employee( T2E) or Kbase or Minutes or Invitee or Supplier Contact or Contact related to it.</description>
    <label>Connection</label>
    <nameField>
        <label>Connected With</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>