force-app/main/default/objects/Connection__c/fields/AgendaId__c.field-meta.xml
<CustomField>
    <fullName>AgendaId__c</fullName>
    <label>Agenda</label>
    <referenceTo>Agenda__c</referenceTo>
    <relationshipLabel>Connections By Key-Word</relationshipLabel>
    <relationshipName>AgendaConnection</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>