force-app/main/default/objects/Connection__c/fields/ConnectedField__c.field-meta.xml
<CustomField>
    <fullName>ConnectedField__c</fullName>
    <formula>HYPERLINK( Url__c ,  LinkName__c  , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connected Field</label>
    <type>Text</type>
</CustomField>