force-app/main/default/objects/Connection__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Connection</relationshipLabel>
    <relationshipName>ContactOfConnection</relationshipName>
    <type>Lookup</type>
</CustomField>