force-app/main/default/objects/Connection__c/fields/EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Connection</relationshipLabel>
    <relationshipName>EmployeeConnection</relationshipName>
    <type>Lookup</type>
</CustomField>