force-app/main/default/objects/Connection__c/fields/InviteeId__c.field-meta.xml
<CustomField>
    <fullName>InviteeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitee</label>
    <referenceTo>Invitee__c</referenceTo>
    <relationshipLabel>Connection</relationshipLabel>
    <relationshipName>InviteeConnection</relationshipName>
    <type>Lookup</type>
</CustomField>