force-app/main/default/objects/Connection__c/fields/KeyWords__c.field-meta.xml
<CustomField>
    <fullName>KeyWords__c</fullName>
    <description>Key word set responsible for connection creation.</description>
    <label>Key-Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>