force-app/main/default/objects/Connection__c/fields/LinkName__c.field-meta.xml
<CustomField>
    <fullName>LinkName__c</fullName>
    <label>Link Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>