force-app/main/default/objects/Connection__c/fields/SupContactId__c.field-meta.xml
<CustomField>
    <fullName>SupContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>SupContact__c</referenceTo>
    <relationshipLabel>Connection</relationshipLabel>
    <relationshipName>SupContactOfAgenda</relationshipName>
    <type>Lookup</type>
</CustomField>